<resources>
    <string name="app_name">My Shop</string>

    <string name="content_description">image</string>
    <string name="title_login">LOGIN</string>
    <string name="et_hint_email_id">Email Id</string>
    <string name="et_hint_password">Password</string>
    <string name="lbl_forgot_password">Forgot Password</string>
    <string name="btn_lbl_login">Login</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="register">Register</string>

    <string name="create_an_account">CREATE AN ACCOUNT</string>
    <string name="hint_last_name">Last name</string>
    <string name="et_hint_confirm_password">Confirm Password</string>
    <string name="i_agree_to_the_terms_and_conditions">I agree to the <u> Terms &amp; Conditions </u></string>
    <string name="btn_lbl_register">Register</string>

    <string name="already_have_an_account">Already have an account?</string>
    <string name="login"><u>Login</u></string>
    <string name="hint_first_name">First Name</string>
    <string name="err_msg_enter_first_name">Plesae enter first name</string>
    <string name="err_msg_enter_last_name">PLease Enter Last Name</string>
    <string name="err_msg_enter_email_id">Please Enter Email</string>
    <string name="err_msg_enter_password">PLease Enter Password</string>
    <string name="err_msg_enter_confirm_password">Please Confirm password</string>
    <string name="err_msg_agree_terms_and_condition">Plesae agree to terms and conditions</string>
    <string name="err_msg_password_and_confirm_password_mismatch">Password and Confirm Password are different.</string>
    <string name="please_wait">Please Wait…</string>

    <string name="title_forgot_password">FORGOT PASSWORD</string>
    <string name="forgot_password_title_description">Enter your username and email address we\'ll send you an email to reset your password.</string>
    <string name="btn_lbl_submit">Submit</string>

    <string name="title_complete_profile">Profile</string>
    <string name="et_hint_mobile_number">Mobile Number</string>
    <string name="rb_lbl_male">Male</string>
    <string name="rb_lbl_female">Female</string>
    <string name="btn_lbl_save">Save</string>
    <string name="err_msg_enter_mobile_number">Please enter your mobile number</string>
    <string name="profile_updated">Profile updated successfully</string>

    <!--<string name="title_activity_dashboard">MainActivity</string>-->
    <string name="title_products">Products</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_orders">Orders</string>

    <string name="please_click_back_again_to_exit">Please Click back again to exit</string>
    <string name="settings">Settings</string>

    <string name="lbl_edit">Edit</string>
    <string name="lbl_address">Addresses</string>
    <string name="btn_lbl_logout">Logout</string>
    <string name="title_edit_profile">Edit Profile</string>


</resources>

