<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activities.UserProfileActivity">

    <com.example.myshop.utils.MSTextViewBold
        android:id="@+id/title_settings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:paddingTop="@dimen/et_padding"
        android:paddingBottom="@dimen/et_padding"
        android:gravity="center"
        android:text="@string/settings"
        android:textSize="@dimen/title_textSize"
        android:textStyle="bold"/>

    <com.example.myshop.utils.MSButton
        android:id="@+id/edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/title_settings"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="@dimen/et_padding"
        android:gravity="center"
        android:text="@string/lbl_edit"
        android:textSize="@dimen/et_textSize"
        android:background="@drawable/grey_border_background"
        android:foreground="?attr/selectableItemBackground"
        android:textStyle="bold"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fillViewport="true"
        android:scrollbars="none"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title_settings">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <FrameLayout
                android:id="@+id/fl_user_image"
                android:layout_width="@dimen/profile_user_image_size"
                android:layout_height="@dimen/profile_user_image_size"
                android:layout_marginTop="@dimen/profile_user_image_marginTop"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/user_photo"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="@dimen/profile_user_photo_margin"
                    android:background="@color/colorLightGrey"
                    android:contentDescription="@string/content_description"
                    android:scaleType="fitXY"
                    android:src="@drawable/user_image"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/user_image_background" />


            </FrameLayout>

            <com.example.myshop.utils.MSTextViewBold
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/fl_user_image"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="@dimen/settings_name_marginTop"
                android:gravity="center"
                android:text="Pooja Goyal"
                android:textSize="@dimen/settings_name_textSize"
                android:textColor="@color/colorDarkGrey"
                android:textStyle="bold"/>

            <com.example.myshop.utils.MSTextView
                android:id="@+id/gender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/name"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="@dimen/settings_name_marginTop"
                android:gravity="center"
                android:text="Female"
                android:textSize="@dimen/settings_name_textSize"
                android:textColor="@color/colorDarkGrey"
                android:textStyle="bold"/>

            <com.example.myshop.utils.MSTextView
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/gender"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="@dimen/settings_name_marginTop"
                android:gravity="center"
                android:text="pooja@gmail.com"
                android:textSize="@dimen/settings_name_textSize"
                android:textColor="@color/colorDarkGrey"
                android:textStyle="bold"/>

            <com.example.myshop.utils.MSTextView
                android:id="@+id/mobile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/email"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="@dimen/settings_name_marginTop"
                android:gravity="center"
                android:text="1234567890"
                android:textSize="@dimen/settings_name_textSize"
                android:textColor="@color/colorDarkGrey"
                android:textStyle="bold"/>

            <LinearLayout
                android:id="@+id/address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/mobile"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_margin="@dimen/settings_address_margin"
                android:background="@drawable/grey_border_background"
                android:orientation="horizontal"
                android:foreground="?attr/selectableItemBackground"
                android:paddingStart="@dimen/settings_address_padding">

                <com.example.myshop.utils.MSTextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/settings_lbl_addresses_margin"
                    android:layout_weight="1"
                    android:text="@string/lbl_address"
                    android:textColor="@color/colorSecondaryText"
                    android:textSize="@dimen/settings_lbl_addresses_textSize"/>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/content_description"
                    android:src="@drawable/ic_baseline_keyboard_arrow_right_24"/>

            </LinearLayout>

            <com.example.myshop.utils.MSButton
                android:id="@+id/btn_logout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginStart="16dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/button_background"
                android:foreground="?attr/selectableItemBackground"
                android:paddingBottom="@dimen/btn_padding"
                android:paddingTop="@dimen/btn_padding"
                android:text="@string/btn_lbl_logout"
                android:textColor="@color/white"
                android:textSize="@dimen/btn_textSize"
                app:layout_constraintTop_toBottomOf="@id/address"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>


        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>